2012-12-12  JJ Allaire <jj@rstudio.org>

        * src/Attributes.R: always generate new dynlib file for rebuild=TRUE
        * src/attributes.cpp: set svn:eol-style to native; always generate 
        new dynlib file for rebuild=TRUE

2012-12-12 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Symbol.h: c_str becomes const and added Symbol::operator==(const char* )

2012-12-11  JJ Allaire <jj@rstudio.org>
      
        * R/Attributes.R: always print output when shared library is not created
        * src/attributes.cpp: consolidate attributes into single file
        * src/Attributes.cpp: consolidate attributes into single file
        * src/AttributesGen.h: consolidate attributes into single file
        * src/AttributesGen.cpp: consolidate attributes into single file
        * src/AttributesParser.h: consolidate attributes into single file
        * src/AttributesParser.cpp: consolidate attributes into single file
        * src/AttributesTypes.h: consolidate attributes into single file
        * src/AttributesUtil.h: consolidate attributes into single file
        * inst/NEWS.Rd: additional notes on changes to attributes
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: update for changes 
        to attributes in 0.10.2

2012-12-11 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/String.h: missing operator +=( const StringProxy& )
        * include/Rcpp/sugar/functions/strings/strings.h : string sugar functions
        * include/Rcpp/sugar/functions/strings/collapse.h : collapse function, 
        implementing paste( . , collapse = "" )
        * include/Rcpp/complex.h: operator==( Rcomplex, Rcomplex )
        * src/api.cpp: implementation of operator==(Rcomplex, Rcomplex)
        * include/Rcpp/vector/Vector.h: added const version of operator[](string)

2012-12-10  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: warn when depends attribute is not matched with