@@ -2,7 +2,8 @@
 
         * src/Attributes.R: always generate new dynlib file for rebuild=TRUE
         * src/attributes.cpp: set svn:eol-style to native; always generate 
-        new dynlib file for rebuild=TRUE
+        new dynlib file for rebuild=TRUE; don't declare attributes constant
+        strings extern
 
 2012-12-12 Romain Francois <romain@r-enthusiasts.com>
 
